--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,12 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import '~jquery-ui/themes/base/all.css';
+
+//Bulma
+//@import "node_modules/bulma/bulma";
+//@import "node_modules/font-awesome/scss/font-awesome";
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
